src/main/CAPI_Lines.pas


function Lines_Get_Geometry():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Geometry_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Geometry(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         Parser.CmdString := 'geometry='+Value;
         Edit;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_Rg():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).Rg;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_Rho():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).rho;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_Xg():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).Xg;
  End
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rg(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         Parser.CmdString := Format('rg=%.7g', [Value]);
         Edit;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rho(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         Parser.CmdString := Format('rho=%.7g', [Value]);
         Edit;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xg(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL THEN
  If IsLine(ActiveCircuit.ActiveCktElement) THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         Parser.CmdString := Format('xg=%.7g', [Value]);
         Edit;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Yprim(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
{ Return the YPrim matrix for this element }

VAR
  Result: PDoubleArray;
   iV      : Integer;
   i       : Integer;
   NValues : Integer;
   cValues : pComplexArray;

begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End
   ELSE With ActiveCircuit Do
      If IsLine(ActiveCircuit.ActiveCktElement) THEN
      WITH TLineObj(ActiveCircuit.ActiveCktElement) Do  Begin
          NValues := SQR(Yorder);
          cValues := GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
          If cValues=Nil Then Begin   // check for unassigned array
                            Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array
                            Exit;  // Get outta here
                         End;
          Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);  // Make variant array
          iV := 0;

          FOR i := 1 to  NValues DO  Begin    // Plunk the values in the variant array
              Result[iV] := cValues^[i].re;
              Inc(iV);
              Result[iV] := cValues^[i].im;
              Inc(iV);
          End;
      End
      ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
//------------------------------------------------------------------------------
procedure Lines_Set_Yprim(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;

begin
    Value := PDoubleArray(ValuePtr);
     IF ActiveCircuit <> NIL Then  Begin
       {Do Nothing for now}
     End;
end;
//------------------------------------------------------------------------------
function Lines_Get_NumCust():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).BranchNumCustomers  ;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_TotalCust():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).BranchTotalCustomers  ;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_Parent():Integer;cdecl;
{ Sets the Active Line to the immediately upline Line obj, if any}
{ Returns line index  or 0 if it fails or no more lines}

Var
   pLine:TLineObj;

Begin

   Result := 0;
   If ActiveCircuit <> Nil Then
     If IsLine(ActiveCircuit.ActiveCktElement) then
     Begin
          pLine := TLineObj(ActiveCircuit.ActiveCktElement);
          If pLine.ParentPDelement <> Nil Then
          Begin
              If (pLine.ParentPDelement.Enabled) and (IsLine(pLine.ParentPDelement)) Then
              Begin
                ActiveCircuit.ActiveCktElement := pLine.ParentPDElement;
                Result := ActiveCircuit.Lines.ActiveIndex;
              End;
          End;
     End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Count():Integer;cdecl;
begin
    If Assigned(Activecircuit) Then
          Result := ActiveCircuit.Lines.ListSize ;
end;
//------------------------------------------------------------------------------
function Lines_Get_Spacing_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).SpacingCode;
  End
end;

function Lines_Get_Spacing():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Spacing_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Spacing(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         Parser.CmdString := 'spacing='+Value;
         Edit;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_Units():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).LengthUnits;
  End

end;
//------------------------------------------------------------------------------
procedure Lines_Set_Units(Value: Integer);cdecl;
{
 This code assumes the present value of line units is NONE.
 The Set functions in this interface all set values in this length unit.
}
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
          if Value < dssLineUnitsMaxnum  then
            begin
               Parser.CmdString := Format('units=%s', [LineUnitsStr(Value)]);
               Edit;
               YprimInvalid := True;
            end
          else
            DoSimpleMsg('Invalid line units integer sent via COM interface.  Please enter a value within range.',183);

       END;
  End;
end;
//------------------------------------------------------------------------------
END.
